# gi002

./: .dockerignore  .env.example  Dockerfile  README-ROOT.md  README.md  requirements.txt
ai-novel-writing-projects/: PROJECT-LIST.md  QUICK-START.md  README.md
ai-novel-writing-projects/01-Chinese-Projects/: README.md
ai-novel-writing-projects/02-Multilingual-Projects/: README.md
ai-novel-writing-projects/03-LLM-Based-Tools/: README.md
ai-novel-writing-projects/04-Interactive-Story-Writers/: README.md
ai-opensource-research/: README.md
app/: __init__.py  main.py
chinese-culture-projects/: QUICK-REFERENCE.md  README.md
chrome-selenium-docker/: .gitignore  DOCKER-IMAGE.md  TEST-REPORT.md  docker-compose.yml  requirements.txt
clothing-materials-analysis/: 衣服材质分类与防静电分析.md
config/: pip.conf.template
go-enterprise-platform/: .gitignore  ARCHITECTURE.md  Makefile  PROJECT_STRUCTURE.txt  README.md  go.mod
python-enterprise-platform/: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python-enterprise-platform/core-framework/auth/: __init__.py  jwt_handler.py  password.py  rbac.py
python-enterprise-platform/core-framework/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
python-enterprise-platform/core-framework/config/: __init__.py  settings.py
python-enterprise-platform/core-framework/database/: __init__.py  base.py  mongodb_database.py  sql_database.py
python-enterprise-platform/core-framework/exceptions/: __init__.py  base.py  handlers.py
python-enterprise-platform/core-framework/logging/: __init__.py  logger.py
python-enterprise-platform/core-framework/messaging/: __init__.py  base.py  rabbitmq_queue.py  redis_queue.py
python-enterprise-platform/docs/: ARCHITECTURE.md  QUICKSTART.md
python-enterprise-platform/infrastructure/mcp-servers/: .env.example  README.md  mcp-config.json
python-enterprise-platform/infrastructure/prometheus/: prometheus.yml
python-enterprise-platform/scripts/: init-db.py  start-all.sh
python-enterprise-platform/services/user-service/: Dockerfile  main.py
python-enterprise-platform/services/user-service/app/: __init__.py  dependencies.py
python-enterprise-platform/services/user-service/app/api/: __init__.py  auth.py  users.py
python-enterprise-platform/services/user-service/app/models/: user.py
python-enterprise-platform/services/user-service/app/schemas/: user.py
python-enterprise-platform/tests/: test_cache.py  test_database.py
scripts/: entrypoint.sh  health-check.py
springboot1-enterprise/: .gitignore  COMPONENTS.md  PROJECT_OVERVIEW.md  README.md  STRUCTURE.txt  pom.xml  start-all.bat  start-all.sh  stop-all.sh  test-api.sh
springboot2-enterprise/: .gitignore  PROJECT_SUMMARY.md  README.md  pom.xml  start-all.bat  start-all.sh
springboot3-enterprise/: README.md  pom.xml
springboot4-enterprise-platform/: MCP_TESTING_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SPRINGBOOT4_FEATURES.md  VERIFICATION_CHECKLIST.md  pom.xml
vue-enterprise-platform/: .gitignore  .npmrc  PROJECT_SUMMARY.md  README.md  package.json  pnpm-workspace.yaml
(+210 files in other folders)
